fixture-catalog/fixtures/core/valid/operations/inline-with-imported-fragments/operations.ts
import { gql } from "../../../../../graphql-system";
import { userFragment } from "./fragments";

export const getUserById = gql.default(({ query }) =>
  query("GetUserById")({
    variables: `($id: ID!)`,
    fields: ({ f, $ }) => ({
      ...f("employee", { id: $.id })(() => ({
        ...userFragment.spread(),
      })),
    }),
  })(),
);
